update models and results