@@ -4,9 +4,10 @@ import weka.core.Instances;
 import weka.core.converters.ConverterUtils.DataSource;
 import weka.classifiers.Classifier;
 import weka.classifiers.Evaluation;
-import weka.classifiers.bayes.NaiveBayes; // Import the Naive Bayes classifier
+import weka.classifiers.bayes.NaiveBayes;
 import weka.core.SerializationHelper;
 
+//& 'C:\Program Files\Java\jdk-19\bin\java.exe' --add-opens java.base/java.lang=ALL-UNNAMED '@C:\Users\ttai2\AppData\Local\Temp\cp_ajod6srm5x4r5ffoofl25h39k.argfile' 'classification.ClassifierNaiveBayes' 
 public class ClassifierNaiveBayes {
 
     public static void main(String[] args) throws Exception {
